Raise test coverage and clear Sonar findings
Add tests for the attribute definitions, key specification collections, keystore
key generation, secret encoding, exception to error code mapping, token instance
lifecycle, entity identity and migration checksum helpers. Line coverage moves
from 54% to 82% without any coverage exclusions, and a JaCoCo rule holds the
floor so the build fails before the figure drops again.

Remove the duplicate migration test that the test runner never executed, and
clear the reported code smells: private constructors on utility classes,
parameterized logging, parametrized generics, unused imports and locals,
commented-out code and the deprecated random string call.

Curve name constants and the already-shipped migrations keep their findings
suppressed with the reason recorded: both are values that existing installations
depend on and cannot be changed.