@@ -5,7 +5,6 @@ import com.czertainly.api.model.common.attribute.v2.content.IntegerAttributeCont
 import org.springframework.lang.Nullable;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public enum FalconDegree {
     FALCON_512(512, 7176, 10088),
@@ -63,9 +62,9 @@ public enum FalconDegree {
         return null;
     }
 
-    public static List<BaseAttributeContentV2> asIntegerAttributeContentList() {
+    public static List<BaseAttributeContentV2<?>> asIntegerAttributeContentList() {
         return List.of(values()).stream()
-                .map(degree -> new IntegerAttributeContentV2(degree.name(), degree.getDegree()))
-                .collect(Collectors.toList());
+                .<BaseAttributeContentV2<?>>map(degree -> new IntegerAttributeContentV2(degree.name(), degree.getDegree()))
+                .toList();
     }
 }
