@@ -5,7 +5,6 @@ import com.czertainly.api.model.common.attribute.v2.content.IntegerAttributeCont
 import org.springframework.lang.Nullable;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public enum MLKEMSecurityCategory {
 
@@ -70,9 +69,9 @@ public enum MLKEMSecurityCategory {
         return null;
     }
 
-    public static List<BaseAttributeContentV2> asIntegerAttributeContentList() {
+    public static List<BaseAttributeContentV2<?>> asIntegerAttributeContentList() {
         return List.of(values()).stream()
-                .map(d -> new IntegerAttributeContentV2(d.name(), d.getNistSecurityCategory()))
-                .collect(Collectors.toList());
+                .<BaseAttributeContentV2<?>>map(d -> new IntegerAttributeContentV2(d.name(), d.getNistSecurityCategory()))
+                .toList();
     }
 }
